# xjmusic

./: .editorconfig  .env.default  .env.example  .env.production  .gitattributes  .gitignore  .project  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  Dockerfile  Dockerfile.builder  Dockerfile.runner  EclipseCodeStyle.xml  IntellijCodeStyle.xml  LICENSE.txt  Makefile  PRODUCTION.md  Procfile  README.md  SECURITY.md  annotated.html  bootstrap-chains.example.json  build.gradle  candidate.properties  classes.html  common.properties  coolair.json  datadog.example.yaml  datadog.yaml  default.env  dependency-reduced-pom.xml  dir_009524b8ed8e14426d520586a419ee1d.html  dir_1fd76a25fb61c8ce0f520454a712f4bc.html  dir_2685b78738293fcdb3f48294f5188863.html  dir_291006a3e064f13dca9ac01158de3303.html  dir_423b9d3680e84088c8b3d609cb192895.html  dir_4436f522f7299714562e1ac1040223f4.html  dir_4885998c6e272f73abbaa79bdde98e1d.html  dir_4adf2aa84654adf4da628786623bc7f6.html  (+161 more)
.z/: build  (+7 more)
engine/: .clang-format  .gitignore  CLionCodeStyle.xml  CMakeLists.txt  CodeStyle.xml  LICENSE  README.md  config  description  pom.xml
engine/app/: CMakeLists.txt  app.cpp
engine/doc/: CMakeLists.txt  index.md
engine/example/: App.cpp  App.h  CMakeLists.txt  EngineAudioSchedule.cpp  EngineAudioSchedule.h  EngineScheduledAudio.cpp  EngineScheduledAudio.h  EngineUiBase.cpp  EngineUiBase.h  XJPlayer.cpp  XJPlayer.h  main.cpp
engine/include/nlohmann/: README.md  json.hpp
engine/include/xjmusic/: Engine.h  EngineException.h  xjmusic.h
engine/include/xjnexus/: xjnexus.h
engine/src/: CMakeLists.txt  Engine.cpp  xjmusic.cpp  xjnexus.cpp
engine/src/audio/: ActiveAudio.cpp  AudioFormat.cpp  AudioInMemory.cpp  AudioLoader.cpp  AudioMathUtils.cpp  AudioScheduleEvent.cpp
engine/src/content/: ContentEntityStore.cpp  ContentStore.cpp  Entity.cpp  EntityUtils.cpp  Instrument.cpp  InstrumentAudio.cpp  InstrumentConfig.cpp  InstrumentMeme.cpp  Library.cpp  MemeTaxonomy.cpp  Program.cpp  ProgramConfig.cpp  ProgramMeme.cpp  ProgramSequence.cpp  ProgramSequenceBinding.cpp  ProgramSequenceBindingMeme.cpp  ProgramSequenceChord.cpp  ProgramSequenceChordVoicing.cpp  ProgramSequencePattern.cpp  ProgramSequencePatternEvent.cpp  ProgramVoice.cpp  ProgramVoiceTrack.cpp  Project.cpp  Template.cpp  TemplateBinding.cpp  TemplateConfig.cpp
engine/src/craft/: BackgroundCraft.cpp  BeatCraft.cpp  Craft.cpp  CraftFactory.cpp  DetailCraft.cpp  MacroMainCraft.cpp  TransitionCraft.cpp
engine/src/fabricator/: ChainUtils.cpp  FabricationEntityStore.cpp  FabricationException.cpp  FabricationFatalException.cpp  FabricationWrapper.cpp  Fabricator.cpp  FabricatorFactory.cpp  MarbleBag.cpp  MemeIsometry.cpp  NameIsometry.cpp  NotePicker.cpp  RankedNote.cpp  SegmentEntityStore.cpp  SegmentRetrospective.cpp  SegmentUtils.cpp  TemplateUtils.cpp
engine/src/meme/: MemeConstellation.cpp  MemeIsometry.cpp  MemeStack.cpp  MemeTaxonomy.cpp  ParseAnti.cpp  ParseNumeric.cpp  ParseStrong.cpp  ParseUnique.cpp
engine/src/music/: Accidental.cpp  BPM.cpp  Bar.cpp  Chord.cpp  Note.cpp  NoteRange.cpp  Octave.cpp  PitchClass.cpp  Root.cpp  SlashRoot.cpp  Step.cpp  StickyBun.cpp  Tuning.cpp
engine/src/segment/: Chain.cpp  Segment.cpp  SegmentChoice.cpp  SegmentChoiceArrangement.cpp  SegmentChoiceArrangementPick.cpp  SegmentChord.cpp  SegmentChordVoicing.cpp  SegmentEntityStore.cpp  SegmentMeme.cpp  SegmentMessage.cpp  SegmentMeta.cpp
engine/src/util/: ConfigParser.cpp  CsvUtils.cpp  StringUtils.cpp  ValueUtils.cpp
engine/src/work/: CraftWork.cpp  DubWork.cpp  FabricationManager.cpp  FabricationSettings.cpp  WorkManager.cpp  WorkSettings.cpp
engine/test/: CMakeLists.txt  EngineTest.cpp  XJEngineTest.cpp
engine/test/_data/: content_store_test.json
engine/test/_helper/: AssertionHelpers.cpp  AssertionHelpers.h  ContentFixtures.cpp  ContentFixtures.h  ContentTestHelper.cpp  ContentTestHelper.h  FabricationContentOneFixtures.cpp  FabricationContentOneFixtures.h  FabricationContentOneFixtures.java  FabricationContentTwoFixtures.cpp  FabricationContentTwoFixtures.h  FabricationContentTwoFixtures.java  LoremIpsum.cpp  LoremIpsum.h  SegmentFixtures.cpp  SegmentFixtures.h  TestHelpers.cpp  TestHelpers.h  YamlTest.cpp  YamlTest.h
engine/test/_mock/: MockFabricator.h  MockFabricatorFactory.h  MockSegmentRetrospective.h
engine/test/audio/: ActiveAudioTest.cpp  AudioLoaderImplTest.java  AudioMathUtilsTest.cpp  AudioMathUtilsTest.java
engine/test/content/: ContentEntityStoreTest.cpp  ContentStoreTest.cpp  InstrumentAudioTest.cpp  InstrumentConfigTest.cpp  InstrumentMemeTest.cpp  InstrumentTest.cpp  LibraryTest.cpp  MemeTaxonomyTest.cpp  ProgramConfigTest.cpp  ProgramMemeTest.cpp  ProgramSequenceBindingMemeTest.cpp  ProgramSequenceBindingTest.cpp  ProgramSequenceChordTest.cpp  ProgramSequenceChordVoicingTest.cpp  ProgramSequencePatternEventTest.cpp  ProgramSequencePatternTest.cpp  ProgramSequenceTest.cpp  ProgramTest.cpp  ProgramVoiceTest.cpp  ProgramVoiceTrackTest.cpp  ProjectTest.cpp  TemplateBindingTest.cpp  TemplateConfigTest.cpp  TemplateTest.cpp
engine/test/craft/: ArrangementTest.cpp  ArrangementTests.java  CraftImplTest.java  CraftTest.cpp
engine/test/fabricator/: FabricationEntityStoreImplTest.java  FabricationEntityStoreTest.cpp  FabricatorImplTest.java  FabricatorTest.cpp  MarbleBagTest.cpp  MemeIsometryTest.java  NotePickerTest.cpp  NotePickerTests.cpp  SegmentRetrospectiveImplTest.java  SegmentRetrospectiveTest.cpp  SegmentUtilsTest.cpp
engine/test/meme/: MemeIsometryTest.cpp  MemeStackTest.cpp  MemeTaxonomyTest.cpp
engine/test/mixer/: AudioMathUtilFormatTest.java  EnvelopeProviderTest.java  MathUtilTest.java  MixerConfigTest.java  MixerFactoryTest.java  MixerImplTest.java
engine/test/music/: AccidentalTest.cpp  BPMTest.cpp  BarTest.cpp  ChordTest.cpp  NoteRangeTest.cpp  NoteTest.cpp  OctaveTest.cpp  PitchClassTest.cpp  RootTest.cpp  SlashRootTest.cpp  StepTest.cpp  StickyBunTest.cpp  TuningTest.cpp
engine/test/segment/: SegmentEntityStoreTest.cpp  SegmentMemeTest.cpp
engine/test/util/: ConfigParserTest.cpp  CsvUtilsTest.cpp  (+2 more)
(+13188 files in other folders)
